# stm32_cmake_example

./: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
inc/: main.h
